--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Da Vinci&copy; | welcome</title>
     <link
       rel="stylesheet"
-      href="styles.css"
+      href="./styles.css"
     />
 
     <link
