--- a/index.html
+++ b/index.html
@@ -6,7 +6,53 @@
       rel="stylesheet"
       href="./styles.css"
     />
+<style>}
+p {
+  padding-left: 5px;
+  font-size: 12pt;
+  width: 300px;
+}
+.contact_button {
+  display: flex;
+  flex-direction: row;
+  border: none;
+  justify-content: space-around;
+  background-color: white;
+  padding: 15px 17px;
+  border-radius: 20px;
+  text-transform: uppercase;
+  color: White;
+  font-weight: 700;
+  font-size: 15px;
+}
+.contact_button:hover {
+  opacity: 0.8;
+  cursor: pointer;
+  color: red;
+  background-color: aqua;
+}
+.contact_button a {
+  margin-bottom: 3px;
+  text-decoration: none;
+}
 
+footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  font-weight: 800;
+  font-size: 13pt;
+  color: red;
+  width: 100%;
+  max-width: 1500px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 50px;
+  background-color: #2bffed;
+  border-top: 3px solid red;
+}</style>
     <link
       rel="icon"
       href="Ceo.jpg"
